--- a/ecommerce/templates/about.html
+++ b/ecommerce/templates/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About - Skin cleanser store</title>
-    <link rel="stylesheet" href="assets/css/about.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/about.css') }}" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
@@ -50,7 +50,7 @@
     ></script>
     <link
       rel="shortcut icon"
-      href="/ecommerce/templates/assets/images/cropped-favicon-192x192.jpg"
+      href="{{ url_for('static', filename='/images/cropped-favicon-192x192.jpg') }}"
       type="image/x-icon"
     />
   </head>
@@ -71,14 +71,14 @@
             <section class="business-title header-section2">
               <img
                 class="business-title-img"
-                src="assets/images/site-logo.svg"
+                src="{{ url_for('static', filename='/images/site-logo.svg') }}"
                 alt=""
               />
             </section>
 
             <section class="profile_cart d-flex header-section3">
               <section>
-                <a href=""><i class="fa-solid fa-user"></i></a>
+                <a href="/ecommerce/templates/login.html"><i class="fa-solid fa-user"></i></a>
               </section>
               <section>
                 <span>$0.00</span>
@@ -110,7 +110,7 @@
             <section class="founder-box d-flex">
               <div class="founder-image">
                 <img
-                  src="assets/images/about-founder-img-bg.jpg"
+                  src="{{ url_for('static', filename='/images/about-founder-img-bg.jpg') }}"
                   alt="Founder's Image"
                   srcset=""
                 />
@@ -286,32 +286,32 @@
           <section class="more-img d-flex">
             <section class="more-images">
               <a href="">
-                <img src="assets/images/more-img-1.jpg" alt="" />
+                <img src="{{ url_for('static', filename='/images/more-img-1.jpg') }}" alt="" />
               </a>
             </section>
             <section class="more-images">
               <a href="">
-                <img src="assets/images/more-img-2.jpg" alt="" />
+                <img src="{{ url_for('static', filename='/images/more-img-2.jpg') }}" alt="" />
               </a>
             </section>
             <section class="more-images">
               <a href="">
-                <img src="assets/images/more-img-3.jpg" alt="" />
+                <img src="{{ url_for('static', filename='/images/more-img-3.jpg') }}" alt="" />
               </a>
             </section>
             <section class="more-images">
               <a href="">
-                <img src="assets/images/more-img-4.jpg" alt="" />
+                <img src="{{ url_for('static', filename='/images/more-img-4.jpg') }}" alt="" />
               </a>
             </section>
             <section class="more-images">
               <a href="">
-                <img src="assets/images/more-img-5.jpg" alt="" />
+                <img src="{{ url_for('static', filename='/images/more-img-5.jpg') }}" alt="" />
               </a>
             </section>
             <section class="more-images">
               <a href="">
-                <img src="assets/images/more-img-6.jpg" alt="" />
+                <img src="{{ url_for('static', filename='/images/more-img-6.jpg') }}" alt="" />
               </a>
             </section>
           </section>
@@ -369,15 +369,15 @@
 
         <section class="footer-icons">
           <section>
-            <img src="assets/images/site-logo-dark.svg" alt="" />
+            <img src="{{ url_for('static', filename='/images/site-logo-dark.svg') }}" alt="" />
           </section>
 
           <section>
             <ul class="d-flex footer-options">
-              <li><a href="index.html">HOME</a></li>
-              <li><a href="">SHOP</a></li>
-              <li><a href="about.html">ABOUT</a></li>
-              <li><a href="contact.html">CONTACT</a></li>
+              <li><a href="/ecommerce/templates/index.html">Home</a></li>
+                        <li><a href="/ecommerce/templates/shop.html">Shop</a></li>
+                        <li><a href="/ecommerce/templates/about.html">About</a></li>
+                        <li><a href="/ecommerce/templates/contact.html">Contact</a></li>
             </ul>
           </section>
 
