--- a/ecommerce/templates/cleanser.html
+++ b/ecommerce/templates/cleanser.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skin cleanser store</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/styles.css') }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -18,9 +18,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <script src="https://kit.fontawesome.com/f117ac489a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/css/shop.css">
-    <link rel="stylesheet" href="assets/css/moisturiser.css">
-    
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/shop.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/moisturiser.css') }}">
+    <link
+      rel="shortcut icon"
+      href="{{ url_for('static', filename='/images/cropped-favicon-192x192.jpg') }}"
+      type="image/x-icon"
+    />
 </head>
 <body>
     <div>
@@ -37,12 +41,12 @@
                     </section>
     
                     <section class="business-title header-section2">
-                        <img class="business-title-img" src="assets/images/site-logo-dark.svg" alt="" >
+                        <img class="business-title-img" src="{{ url_for('static', filename='/images/site-logo-dark.svg') }}" alt="" >
                     </section>
     
                     <section class="profile_cart d-flex header-section3">
                         <section>
-                            <a href=""><i class="fa-solid fa-user"></i></a>
+                            <a href="/ecommerce/templates/login.html"><i class="fa-solid fa-user"></i></a>
                         </section>
                         <section>
                             <span class="cart-total">$0.00</span>
@@ -118,7 +122,7 @@
                                 <div>
                                     <a href="" class="anchor-card">
                                         <div class="product-img_container">
-                                            <img src="assets/images/pic6.jpg" alt="">
+                                            <img src="{{ url_for('static', filename='/images/pic6.jpg') }}" alt="">
                                             <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
                                         </div>
                                         
@@ -142,7 +146,7 @@
                                 <div>
                                     <a href="" class="anchor-card">
                                         <div class="product-img_container">
-                                            <img src="assets/images/pic5.jpg" alt="">
+                                            <img src="{{ url_for('static', filename='/images/pic5.jpg') }}" alt="">
                                             <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
                                         </div>
                                         
@@ -166,7 +170,7 @@
                                 <div>
                                     <a href="" class="anchor-card">
                                         <div class="product-img_container">
-                                            <img src="assets/images/pic7.jpg" alt="">
+                                            <img src="{{ url_for('static', filename='/images/pic7.jpg') }}" alt="">
                                             <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
                                         </div>
                                         
@@ -190,7 +194,7 @@
                                 <div>
                                     <a href="" class="anchor-card">
                                         <div class="product-img_container">
-                                            <img src="assets/images/pic12.jpg" alt="">
+                                            <img src="{{ url_for('static', filename='/images/pic12.jpg') }}" alt="">
                                             <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
                                         </div>
                                         
@@ -215,7 +219,7 @@
                                 <div>
                                     <a href="" class="anchor-card">
                                         <div class="product-img_container">
-                                            <img src="assets/images/pic1.jpg" alt="">
+                                            <img src="{{ url_for('static', filename='/images/pic1.jpg') }}" alt="">
                                             <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
                                         </div>
                                         
@@ -241,7 +245,7 @@
                                 <div>
                                     <a href="" class="anchor-card">
                                         <div class="product-img_container">
-                                            <img src="assets/images/pic13.jpg" alt="">
+                                            <img src="{{ url_for('static', filename='/images/pic13.jpg') }}" alt="">
                                             <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
                                         </div>
                                         
@@ -328,15 +332,15 @@
 
             <section class="footer-icons">
                 <section>
-                    <img src="assets/images/site-logo-dark.svg" alt="">
+                    <img src="{{ url_for('static', filename='/images/site-logo-dark.svg') }}" alt="">
                 </section>
 
                 <section>
                     <ul class="d-flex footer-options">
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Shop</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
+                        <li><a href="/ecommerce/templates/index.html">Home</a></li>
+                        <li><a href="/ecommerce/templates/shop.html">Shop</a></li>
+                        <li><a href="/ecommerce/templates/about.html">About</a></li>
+                        <li><a href="/ecommerce/templates/contact.html">Contact</a></li>
                     </ul>
                 </section>
 
