--- a/ecommerce/templates/contact.html
+++ b/ecommerce/templates/contact.html
@@ -339,10 +339,10 @@
 
           <section>
             <ul class="d-flex footer-options">
-              <li><a href="index.html">HOME</a></li>
-              <li><a href="">SHOP</a></li>
-              <li><a href="about.html">ABOUT</a></li>
-              <li><a href="contact.html">CONTACT</a></li>
+              <li><a href="/ecommerce/templates/index.html">Home</a></li>
+              <li><a href="/ecommerce/templates/shop.html">Shop</a></li>
+              <li><a href="/ecommerce/templates/about.html">About</a></li>
+              <li><a href="/ecommerce/templates/contact.html">Contact</a></li>>
             </ul>
           </section>
 
