--- a/ecommerce/templates/bodyLotion.html
+++ b/ecommerce/templates/bodyLotion.html
@@ -284,5 +284,6 @@
 
         </footer>
     </div>
+    <script src="{{ url_for('static', filename='/side-cart.js') }}"></script>
 </body>
 </html>
