--- a/ecommerce/templates/cart.html
+++ b/ecommerce/templates/cart.html
@@ -224,5 +224,6 @@
 
         </footer>
     </div>
+    <script src="{{ url_for('static', filename='/side-cart.js') }}"></script>
 </body>
 </html>
