--- a/ecommerce/templates/contact.html
+++ b/ecommerce/templates/contact.html
@@ -358,5 +358,6 @@
         </section>
       </footer>
     </div>
+    <script src="{{ url_for('static', filename='/side-cart.js') }}"></script>
   </body>
 </html>
