--- a/ecommerce/templates/about.html
+++ b/ecommerce/templates/about.html
@@ -393,5 +393,6 @@
         </section>
       </footer>
     </div>
+    <script src="{{ url_for('static', filename='/side-cart.js') }}"></script>
   </body>
 </html>
