--- a/ecommerce/templates/bundles.html
+++ b/ecommerce/templates/bundles.html
@@ -235,5 +235,6 @@
 
         </footer>
     </div>
+    <script src="{{ url_for('static', filename='/side-cart.js') }}"></script>
 </body>
 </html>
