--- a/ecommerce/templates/product.html
+++ b/ecommerce/templates/product.html
@@ -181,5 +181,6 @@
 
         </footer>
     </div>
+    <script src="{{ url_for('static', filename='/side-cart.js') }}"></script>
 </body>
 </html>
