--- a/ecommerce/templates/shop.html
+++ b/ecommerce/templates/shop.html
@@ -32,69 +32,41 @@
                 <section class="nav-container d-flex">
                     <section class="header-options header-section1">
                         <ul class="d-flex options">
-                            <li><a href="/ecommerce/templates/index.html">HOME</a></li>
-                            <li><a href="/ecommerce/templates/shop.html">SHOP</a></li>
-                            <li><a href="/ecommerce/templates/about.html">ABOUT</a></li>
-                            <li><a href="/ecommerce/templates/contact.html">CONTACT</a></li>
+                            <li><a class="a-nav" href="/ecommerce/templates/index.html">HOME</a></li>
+                            <li><a class="a-nav" href="/ecommerce/templates/shop.html">SHOP</a></li>
+                            <li><a class="a-nav" href="/ecommerce/templates/about.html">ABOUT</a></li>
+                            <li><a class="a-nav" href="/ecommerce/templates/contact.html">CONTACT</a></li>
                         </ul>
                     </section>
-                    
-                    <section class="header-section4" id="nav-open">
-                        <a href=""><i class="fa-solid fa-bars" id="navOpen"></i></a>
-                    </section>
-
-                    <!-- NAV SIDEBAR STARTS -->
-                    <section class="header-options header-section1" id="nav-sidebar">
-                        <a href=""><i class="fa-solid fa-xmark d-flex" id="nav-x"></i></a>
-                        <ul class="d-flex options">
-                            
-                            <li><a href="/ecommerce/templates/index.html">HOME</a></li>
-                            <li><a href="/ecommerce/templates/shop.html">SHOP</a></li>
-                            <li><a href="/ecommerce/templates/about.html">ABOUT</a></li>
-                            <li class="cont"><a href="/ecommerce/templates/contact.html">CONTACT</a></li>
-                        </ul>
-                    </section>
-                    <!-- NAV SIDEBAR ENDS -->
     
                     <section class="business-title header-section2">
-                        <img class="business-title-img" src="{{ url_for('static', filename='/images/site-logo.svg') }}" alt="" >
+                        <img class="business-title-img" src="{{ url_for('static', filename='/images/site-logo-dark.svg') }}" alt="" >
                     </section>
     
                     <section class="profile_cart d-flex header-section3">
                         <section>
                             <a href="/ecommerce/templates/login.html"><i class="fa-solid fa-user"></i></a>
                         </section>
-                        <section class="cartTotal">
-                            <span>$0.00</span>
+                        <section>
+                            <span class="cart-total">$0.00</span>
                         </section>
-                        <section >
-                            <section>
-                                <a href="" ><i class="fa-solid fa-cart-shopping" id="cartBag"></i></a>
-                            </section>
+                        <section>
+                            <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
 
                             <div class="cart-num d-flex">
                                 <p>0</p>
                             </div>
                         </section>
                     </section>
-
-                    <!-- CART SIDEBAR STARTS -->
-                    <section class="openCart" id="openCart1">
-                        <div class="d-flex openCart-close">
-                            <p>Shopping cart</p>
-                            <p><a id="x" href=""><i class="fa-solid fa-xmark"></i></a></p>
-                        </div>
-                        <hr>
-                        
-                        <p class="openCart-products">No products in the cart</p>
-                        
-
-                        <a class="openCart-a" href="">CONTINUE SHOPPING</a>
-
-                    </section>
-                    <!-- CART SIDEBAR ENDS -->
     
                 </section>
+
+                <!-- <section class="hero-text-container">
+                    <h1>Get in Touch</h1>
+                    <p>Enim lectus mauris faucibus turpis convallis ipsum odio lorem dignissim odio enim nullam venenatis erat cursus tortor tristique aliquam nulla.</p>
+                </section> -->
+            </header>
+        </section>
 
         
         <main>
