--- a/ecommerce/templates/sunscreen.html
+++ b/ecommerce/templates/sunscreen.html
@@ -258,5 +258,6 @@
 
         </footer>
     </div>
+    <script src="{{ url_for('static', filename='/side-cart.js') }}"></script>
 </body>
 </html>
