Landing page fix

--- a/ecommerce/templates/about.html
+++ b/ecommerce/templates/about.html
@@ -61,7 +61,7 @@
           <section class="nav-container d-flex">
             <section class="header-options header-section1">
               <ul class="d-flex options">
-                <li><a href="index.html">HOME</a></li>
+                <li><a href="/">HOME</a></li>
                 <li><a href="shop.html">SHOP</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
@@ -374,7 +374,7 @@
 
           <section>
             <ul class="d-flex footer-options">
-              <li><a href="index.html">HOME</a></li>
+              <li><a href="/">HOME</a></li>
               <li><a href="">SHOP</a></li>
               <li><a href="about.html">ABOUT</a></li>
               <li><a href="contact.html">CONTACT</a></li>
