--- a/ecommerce/templates/cart.html
+++ b/ecommerce/templates/cart.html
@@ -35,7 +35,7 @@
                 <section class="nav-container d-flex">
                     <section class="header-options header-section1">
                         <ul class="d-flex options">
-                            <li><a class="a-nav" href="/ecommerce/templates/index.html">HOME</a></li>
+                            <li><a class="a-nav" href="/">HOME</a></li>
                             <li><a class="a-nav" href="/ecommerce/templates/shop.html">SHOP</a></li>
                             <li><a class="a-nav" href="/ecommerce/templates/about.html">ABOUT</a></li>
                             <li><a class="a-nav" href="/ecommerce/templates/contact.html">CONTACT</a></li>
@@ -204,7 +204,7 @@
 
                 <section>
                     <ul class="d-flex footer-options">
-                        <li><a href="/ecommerce/templates/index.html">Home</a></li>
+                        <li><a href="/">Home</a></li>
                         <li><a href="/ecommerce/templates/shop.html">Shop</a></li>
                         <li><a href="/ecommerce/templates/about.html">About</a></li>
                         <li><a href="/ecommerce/templates/contact.html">Contact</a></li>
