--- a/ecommerce/templates/contact.html
+++ b/ecommerce/templates/contact.html
@@ -63,7 +63,7 @@
           <section class="nav-container d-flex">
             <section class="header-options header-section1">
               <ul class="d-flex options">
-                <li><a href="index.html">HOME</a></li>
+                <li><a href="/">HOME</a></li>
                 <li><a href="shop.html">SHOP</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
@@ -339,7 +339,7 @@
 
           <section>
             <ul class="d-flex footer-options">
-              <li><a href="/ecommerce/templates/index.html">Home</a></li>
+              <li><a href="/">Home</a></li>
               <li><a href="/ecommerce/templates/shop.html">Shop</a></li>
               <li><a href="/ecommerce/templates/about.html">About</a></li>
               <li><a href="/ecommerce/templates/contact.html">Contact</a></li>>
