--- a/ecommerce/templates/home.html
+++ b/ecommerce/templates/home.html
@@ -32,7 +32,7 @@
                 <section class="nav-container d-flex">
                     <section class="header-options header-section1">
                         <ul class="d-flex options">
-                            <li><a href="/ecommerce/templates/index.html">HOME</a></li>
+                            <li><a href="/">HOME</a></li>
                             <li><a href="/ecommerce/templates/shop.html">SHOP</a></li>
                             <li><a href="/ecommerce/templates/about.html">ABOUT</a></li>
                             <li><a href="/ecommerce/templates/contact.html">CONTACT</a></li>
@@ -48,7 +48,7 @@
                         <a href=""><i class="fa-solid fa-xmark d-flex" id="nav-x"></i></a>
                         <ul class="d-flex options">
                             
-                            <li><a href="/ecommerce/templates/index.html">HOME</a></li>
+                            <li><a href="/">HOME</a></li>
                             <li><a href="/ecommerce/templates/shop.html">SHOP</a></li>
                             <li><a href="/ecommerce/templates/about.html">ABOUT</a></li>
                             <li class="cont"><a href="/ecommerce/templates/contact.html">CONTACT</a></li>
@@ -774,7 +774,7 @@
 
                 <section>
                     <ul class="d-flex footer-options">
-                        <li><a href="/ecommerce/templates/index.html">Home</a></li>
+                        <li><a href="/">Home</a></li>
                         <li><a href="/ecommerce/templates/shop.html">Shop</a></li>
                         <li><a href="/ecommerce/templates/about.html">About</a></li>
                         <li><a href="/ecommerce/templates/contact.html">Contact</a></li>
